crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    If(
        If {
            branches: [
                (
                    Class(
                        Class {
                            target: Path {
                                segments: [
                                    Segment {
                                        ident: "T",
                                        generic_args: [],
                                    },
                                ],
                            },
                            fields: [
                                (
                                    "v",
                                    If(
                                        If {
                                            branches: [
                                                (
                                                    Class(
                                                        Class {
                                                            target: Path {
                                                                segments: [
                                                                    Segment {
                                                                        ident: "T",
                                                                        generic_args: [],
                                                                    },
                                                                ],
                                                            },
                                                            fields: [],
                                                        },
                                                    ),
                                                    Block {
                                                        items: [],
                                                        last: Some(
                                                            Literal(
                                                                Int(
                                                                    Int {
                                                                        value: 0,
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ],
                                            else_: Some(
                                                Block {
                                                    items: [],
                                                    last: Some(
                                                        Literal(
                                                            Int(
                                                                Int {
                                                                    value: 1,
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                    Block {
                        items: [],
                        last: Some(
                            Literal(
                                Int(
                                    Int {
                                        value: 0,
                                    },
                                ),
                            ),
                        ),
                    },
                ),
            ],
            else_: Some(
                Block {
                    items: [],
                    last: Some(
                        Literal(
                            Int(
                                Int {
                                    value: 1,
                                },
                            ),
                        ),
                    ),
                },
            ),
        },
    ),
)
