crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
If {
    branches: [
        (
            Call {
                opt: false,
                target: GetIndex {
                    opt: false,
                    target: GetField {
                        opt: false,
                        target: GetVar {
                            name: "a",
                        },
                        key: "b",
                    },
                    key: GetVar {
                        name: "c",
                    },
                },
                args: [
                    GetVar {
                        name: "d",
                    },
                ],
            },
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
        ),
    ],
    else_: Some(
        Block {
            items: [],
            last: Some(
                Int {
                    value: 1,
                },
            ),
        },
    ),
}
