crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_if.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    If {
        branches: [
            (
                Bool {
                    value: true,
                },
                Block {
                    items: [],
                    last: Some(
                        GetVar {
                            name: "a",
                        },
                    ),
                },
            ),
        ],
        else_: Some(
            Block {
                items: [],
                last: Some(
                    GetVar {
                        name: "a",
                    },
                ),
            },
        ),
    },
)
