crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_inst-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Call {
    opt: false,
    target: Inst {
        target: GetField {
            opt: false,
            target: Call {
                opt: false,
                target: Inst {
                    target: GetVar {
                        name: "foo",
                    },
                    args: [
                        Path {
                            segments: [
                                Segment {
                                    ident: "T",
                                    generic_args: [],
                                },
                            ],
                        },
                    ],
                },
                args: [],
            },
            key: "bar",
        },
        args: [
            Path {
                segments: [
                    Segment {
                        ident: "U",
                        generic_args: [],
                    },
                ],
            },
        ],
    },
    args: [],
}
