crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_inst.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Class {
    target: Path {
        segments: [
            Segment {
                ident: "Foo",
                generic_args: [
                    Path {
                        segments: [
                            Segment {
                                ident: "T",
                                generic_args: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
    fields: [],
}
