crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-11.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Lambda(
        Lambda {
            params: [
                "a",
                "b",
            ],
            body: Block {
                items: [
                    Expr(
                        GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                    ),
                    Expr(
                        GetVar(
                            GetVar {
                                name: "b",
                            },
                        ),
                    ),
                ],
                last: None,
            },
        },
    ),
)
