crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-13.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Lambda {
            params: [
                "a",
                "b",
            ],
            body: Block {
                items: [],
                last: Some(
                    GetVar {
                        name: "a",
                    },
                ),
            },
        },
    ),
    [],
)
