crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_lambda-14.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Lambda {
        params: [
            "a",
            "b",
        ],
        body: Block {
            items: [
                GetVar {
                    name: "a",
                },
            ],
            last: None,
        },
    },
)
